# raylib-falling-sand-sim

./: CMakeLists.txt  README.md
resources/: elements.json
resources/shaders/: custom_shader.fs
src/: application.cc  application.h  automata_matrix.cc  automata_matrix.h  main.cc  world.cc  world.h  world_texture.cc  world_texture.h
